--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+node_modules
+bower_components
+public/assetsnode_modules
+bower_components
+public/assets/*
+!public/assets/images
